<resources>
    <string name="app_name">Movieku</string>
    <string name="movies">Movies</string>
    <string name="tv">Tv</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>